libs/titan - adding Titan2Xml class

--- a/codebase/libs/titan/src/Makefile
+++ b/codebase/libs/titan/src/Makefile
@@ -24,7 +24,8 @@ SUB_DIRS = \
 	DsTitan \
 	file_io \
 	mdv \
-	tserver
+	tserver \
+	xml
 
 include $(LROSE_CORE_DIR)/build/make_include/lrose_make_recursive_dir_targets
 
