Updating CMakeLists, adding xml subdir in libs/titan/src

--- a/codebase/libs/titan/src/CMakeLists.txt
+++ b/codebase/libs/titan/src/CMakeLists.txt
@@ -97,6 +97,7 @@ set (SRCS
       ./tserver/TitanSimpleTrack.cc
       ./tserver/TitanServer.cc
       ./tserver/TitanTrackEntry.cc
+      ./xml/Titan2Xml.cc
    )
 
 if(APPLE)
