libs/euclid/clump - working on ClumpGrid.cc and PjgGridGeom.cc

--- a/codebase/libs/euclid/src/Pjg/Makefile
+++ b/codebase/libs/euclid/src/Pjg/Makefile
@@ -49,6 +49,7 @@ CPPC_SRCS = \
 	PjgCalc.cc \
 	PjgFlatCalc.cc \
 	PjgGrib.cc \
+	PjgGridGeom.cc \
 	PjgLambertAzimMath.cc \
 	PjgLambertConfMath.cc \
 	PjgLatlonCalc.cc \
