--- a/codebase/apps/Radx/src/RadxModelQc/Makefile
+++ b/codebase/apps/Radx/src/RadxModelQc/Makefile
@@ -24,6 +24,7 @@ LOC_LDFLAGS = $(NETCDF4_LDFLAGS)
 
 CPPC_SRCS = \
 	Params.cc \
+	HeaderParams.cc \
 	Parms.cc \
 	Main.cc \
 	RadxModelQc.cc \
@@ -52,6 +53,9 @@ include $(LROSE_CORE_DIR)/build/make_include/lrose_make_c++_targets
 #
 
 include $(LROSE_CORE_DIR)/build/make_include/lrose_make_tdrp_c++_targets
+
+HeaderParams.cc: paramdef.header
+	tdrp_gen -f paramdef.header -c++ -class HeaderParams
 
 #
 # local targets
