--- a/codebase/apps/Radx/src/RadxTimeMedian/Makefile
+++ b/codebase/apps/Radx/src/RadxTimeMedian/Makefile
@@ -57,6 +57,7 @@ HDRS = \
 
 CPPC_SRCS = \
 	Params.cc \
+	HeaderParams.cc \
 	Alg.cc \
 	Histo.cc \
 	Main.cc \
@@ -83,6 +84,9 @@ include $(LROSE_CORE_DIR)/build/make_include/lrose_make_c++_targets
 #
 
 include $(LROSE_CORE_DIR)/build/make_include/lrose_make_tdrp_c++_targets
+
+HeaderParams.cc: paramdef.header
+	tdrp_gen -f paramdef.header -c++ -class HeaderParams
 
 #
 # local targets
