redo some radar based apps/libs to give a more meaningful user interface

--- a/codebase/apps/Radx/src/RadxTimeMedian/Makefile
+++ b/codebase/apps/Radx/src/RadxTimeMedian/Makefile
@@ -31,7 +31,7 @@
 #
 ###########################################################################
 
-include $(LROSE_CORE_DIR)/build/make_include/lrose_make_macros
+include $(RAP_MAKE_INC_DIR)/rap_make_macros
 
 LOC_INC_DIR = .
 MY_CPPCHECKFLAGS = -E Params.cc -E Params.hh -AddStyleFAA -exclude-rules="4.16,4.09,4.14,4.12"
@@ -41,12 +41,10 @@ TARGET_FILE = RadxTimeMedian
 
 LOC_INCLUDES = $(NETCDF4_INCS)
 
-LOC_LIBS = \
-          -ldsdata -lradar -lFmq -lSpdb -lMdv  -ldsserver -ldidss \
-          -lRadx -lNcxx -lrapformats -leuclid -lrapmath \
-          -lphysics -ltoolsa -ldataport -ltdrp \
-          $(NETCDF4_LIBS) \
-          -lfftw3 -lbz2 -lz -lpthread
+LOC_LIBS = -lradar -lRadx -lSpdb -ldsserver \
+	-lrapformats -lrapmath -ldidss -ltoolsa \
+	-ltdrp -ldataport -lfftw3 $(NETCDF4_LIBS) \
+	-lbz2 -lz -lpthread
 
 LOC_LDFLAGS = $(NETCDF4_LDFLAGS)
 
@@ -58,6 +56,7 @@ HDRS = \
 CPPC_SRCS = \
 	Params.cc \
 	Alg.cc \
+	HeaderParams.cc \
 	Histo.cc \
 	Main.cc \
 	Parms.cc \
@@ -70,19 +69,22 @@ CPPC_SRCS = \
 # tdrp macros
 #
 
-include $(LROSE_CORE_DIR)/build/make_include/lrose_make_tdrp_macros
+include $(RAP_MAKE_INC_DIR)/rap_make_tdrp_macros
 
 #
 # C++ targets
 #
 
-include $(LROSE_CORE_DIR)/build/make_include/lrose_make_c++_targets
+include $(RAP_MAKE_INC_DIR)/rap_make_c++_targets
 
 #
 # tdrp targets
 #
 
-include $(LROSE_CORE_DIR)/build/make_include/lrose_make_tdrp_c++_targets
+include $(RAP_MAKE_INC_DIR)/rap_make_tdrp_c++_targets
+
+HeaderParams.cc: paramdef.header
+	tdrp_gen -f paramdef.header -c++ -class HeaderParams
 
 #
 # local targets
