HawkEdit - exposing get_boundary_mask through libSolo; scripts working again with boundary point editior; use _V for Soloii pre-defined f(x)

--- a/codebase/libs/Solo/src/Solo/Makefile
+++ b/codebase/libs/Solo/src/Solo/Makefile
@@ -40,6 +40,7 @@ CPPC_SRCS = \
         OneBoundary.cc \
         BoundaryPointManagement.cc \
         BoundaryPointMap.cc \
+	Boundary.cc \
         SoloFunctionsApi.cc \
 	Despeckle.cc \
 	FlagOps.cc \
