--- a/codebase/apps/radar/src/HawkEdit/Info.plist
+++ b/codebase/apps/radar/src/HawkEdit/Info.plist
@@ -3,13 +3,13 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleExecutable</key>
-	<string>HawkEye</string>
+	<string>HawkEdit</string>
 	<key>CFBundleGetInfoString</key>
 	<string>Created by Qt/QMake</string>
 	<key>CFBundleIconFile</key>
 	<string>HawkEyePolarIcon</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.HawkEye</string>
+	<string>edu.ucar.HawkEdit</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleSignature</key>
