apps/radar/Colide - updating to include Dave Albo's params changes

--- a/codebase/apps/radar/src/Colide/Makefile
+++ b/codebase/apps/radar/src/Colide/Makefile
@@ -28,6 +28,7 @@ HDRS =
 
 CPPC_SRCS = \
 	Params.cc \
+	HeaderParams.cc \
 	Bad.cc \
 	Colide.cc \
 	EllipHandler.cc \
@@ -54,7 +55,6 @@ CPPC_SRCS = \
 	Volume.cc \
 	Window.cc
 
-
 #
 # tdrp macros
 #
@@ -72,6 +72,9 @@ include $(LROSE_CORE_DIR)/build/make_include/lrose_make_c++_targets
 #
 
 include $(LROSE_CORE_DIR)/build/make_include/lrose_make_tdrp_c++_targets
+
+HeaderParams.cc: paramdef.header
+	tdrp_gen -f paramdef.header -c++ -class HeaderParams
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
