--- a/codebase/apps/Radx/src/RadxPersistentClutter/CMakeLists.txt
+++ b/codebase/apps/Radx/src/RadxPersistentClutter/CMakeLists.txt
@@ -18,6 +18,7 @@ set (SRCS
       Parms.cc
       Alg.cc
       FrequencyCount.cc
+      HeaderParams.cc
       Histo.cc
       Info.cc
       RadxPersistentClutter.cc
