--- a/codebase/apps/Radx/src/RadxTimeMedian/__makefile.template
+++ b/codebase/apps/Radx/src/RadxTimeMedian/__makefile.template
@@ -41,12 +41,10 @@ TARGET_FILE = RadxTimeMedian
 
 LOC_INCLUDES = $(NETCDF4_INCS)
 
-LOC_LIBS = \
-          -ldsdata -lradar -lFmq -lSpdb -lMdv  -ldsserver -ldidss \
-          -lRadx -lNcxx -lrapformats -leuclid -lrapmath \
-          -lphysics -ltoolsa -ldataport -ltdrp \
-          $(NETCDF4_LIBS) \
-          -lfftw3 -lbz2 -lz -lpthread
+LOC_LIBS = -lradar -lRadx -lSpdb -ldsserver \
+	-lrapformats -lrapmath -ldidss -ltoolsa \
+	-ltdrp -ldataport -lfftw3 $(NETCDF4_LIBS) \
+	-lbz2 -lz -lpthread
 
 LOC_LDFLAGS = $(NETCDF4_LDFLAGS)
 
