Resolved merge conflict with cmath and byteCount instead of sizeInBytes for Centos7

--- a/codebase/apps/Makefile
+++ b/codebase/apps/Makefile
@@ -11,24 +11,19 @@ SUB_DIRS = \
 	tdrp \
 	scripts \
 	procmap \
-	titan \
-	trec \
-	didss \
-	ingest \
-	dsserver \
-	mdv_utils \
-        physics \
-        satApps \
-	spdb_utils \
-	filters \
-        awc \
-	hydro \
-	interp \
 	radar \
-	refractt \
-        Radx \
-        cidd \
-        spol \
-        xpol
+        Radx 
+
+
+	# spdb_utils \
+        # physics \
+	# dsserver \
+	# trec \
+	#mdv_utils \
+	# didss \
+	# hydro \
+        # awc \
+	#interp \
+	# ingest \
 
 include $(LROSE_CORE_DIR)/build/make_include/lrose_make_recursive_dir_targets
