--- a/codebase/apps/didss/src/CMakeLists.txt
+++ b/codebase/apps/didss/src/CMakeLists.txt
@@ -19,6 +19,7 @@ add_subdirectory (File2Dsr)
 add_subdirectory (Fmq2Fmq)
 add_subdirectory (Fmq2MultMsgFmq)
 add_subdirectory (FmqMon)
+add_subdirectory (FmqTest)
 add_subdirectory (GenPt2Spdb)
 add_subdirectory (Hiq2Dsr)
 add_subdirectory (InputWatcher)
