--- a/codebase/libs/euclid/src/CMakeLists.txt
+++ b/codebase/libs/euclid/src/CMakeLists.txt
@@ -241,9 +241,9 @@ set (SRCS
       ./clump/translate_intervals.c
       ./clump/union_intervals.c
       ./clump/zero_clump.c
-      ./clump/ClumpDualThresh.cc
-      ./clump/ClumpGrid.cc
-      ./clump/GridClumping.cc
+      ./clump/ClumpingDualThresh.cc
+      ./clump/ClumpingMgr.cc
+      ./clump/ClumpProps.cc
       ./geometry/coord_system.c
       ./geometry/convex_hull.c
       ./geometry/create_box.c
