--- a/codebase/apps/Radx/src/RadxDwellCombine/Makefile
+++ b/codebase/apps/Radx/src/RadxDwellCombine/Makefile
@@ -39,7 +39,7 @@ LOC_INCLUDES = $(NETCDF4_INCS)
 
 LOC_LIBS = \
           -ldsdata -lradar -lFmq -lSpdb -lMdv  -ldsserver -ldidss \
-          -lRadx -lNcxx -lrapformats -leuclid -lrapmath \
+          -lRadx -lNcxx -lrapformats -leuclid \
           -lphysics -ltoolsa -ldataport -ltdrp \
           $(NETCDF4_LIBS) \
           -lfftw3 -lbz2 -lz -lpthread
