codebase/CMakeLists - adding find_package(LROSE)

--- a/codebase/CMakeLists.txt
+++ b/codebase/CMakeLists.txt
@@ -60,6 +60,9 @@ endif()
 if (NOT IS_DIRECTORY HDF5_C_INCLUDE_DIR)
   set (HDF5_C_INCLUDE_DIR ${CMAKE_INSTALL_PREFIX}/include)
 endif()
+
+find_package (LROSE)
+
 message("X11_X11_INCLUDE_PATH: ${X11_X11_INCLUDE_PATH}")
 message("X11_LIB_DIR: ${X11_LIB_DIR}")
 message("HDF5_INSTALL_PREFIX: ${HDF5_INSTALL_PREFIX}")
