build/cmake/createCMakeLists.py - adding find_package(LROSE) at the top level

--- a/codebase/CMakeLists.txt
+++ b/codebase/CMakeLists.txt
@@ -48,6 +48,7 @@ if (DEFINED X11_X11_LIB)
 endif()
 find_package (HDF5)
 find_package (NETCDF)
+find_package (LROSE)
 if (DEFINED HDF5_hdf5_LIBRARY_RELEASE)
   get_filename_component(HDF5_INSTALL_PREFIX ${HDF5_hdf5_LIBRARY_RELEASE} DIRECTORY)
 endif()
