Adding apps/radar/src/Mpd2Radx

--- a/.gitignore
+++ b/.gitignore
@@ -487,6 +487,7 @@ codebase/apps/radar/src/MdvFold/MdvFold
 codebase/apps/radar/src/MdvPartRain/MdvPartRain
 codebase/apps/radar/src/MdvRadarShear/MdvRadarShear
 codebase/apps/radar/src/MergeHcrAndHsrl/MergeHcrAndHsrl
+codebase/apps/radar/src/Mpd2Radx/Mpd2Radx
 codebase/apps/radar/src/NexradPowerStats/NexradPowerStats
 codebase/apps/radar/src/PartRain/PartRain
 codebase/apps/radar/src/PidZdrStats/PidZdrStats
