Adding apps/ingest/src/EraNc2Mdv

--- a/codebase/apps/ingest/src/Makefile
+++ b/codebase/apps/ingest/src/Makefile
@@ -19,6 +19,7 @@ SUB_DIRS = \
 	CreateStationList \
 	CsuSounding2Spdb \
 	EolMobileKml2Spdb \
+	EraNc2Mdv \
 	GemVolXml2Dsr \
 	Gini2Mdv \
 	GoesRGLM2Spdb \
