HawkEdit - fixing intermittent BAD_ACCESS segmentation fault error by clearing RayLoc array before each sorting of rays into the RayLoc bins

--- a/codebase/apps/radar/src/HawkEdit/Makefile
+++ b/codebase/apps/radar/src/HawkEdit/Makefile
@@ -206,6 +206,7 @@ MOC_OUTPUT = \
 	moc_SpreadSheetDelegate.cpp \
 	moc_SweepView.cpp \
 	moc_FunctionEditor.cpp \
+	moc_TimeNavView.cpp \
 	qrc_resources.cpp \
 	qrc_customcompleter.cpp
 
