apps/radar/src/ConvStrat -> Ecco

--- a/codebase/apps/ingest/src/CMakeLists.txt
+++ b/codebase/apps/ingest/src/CMakeLists.txt
@@ -24,10 +24,12 @@ add_subdirectory (classIngest)
 add_subdirectory (CreateStationList)
 add_subdirectory (CsuSounding2Spdb)
 add_subdirectory (EolMobileKml2Spdb)
+add_subdirectory (EraNc2Mdv)
 add_subdirectory (GemVolXml2Dsr)
 add_subdirectory (Gini2Mdv)
 add_subdirectory (GoesRGLM2Spdb)
 add_subdirectory (GoesRnetCDF2Mdv)
+add_subdirectory (GpmHdf5ToMdv)
 add_subdirectory (Grib2Mdv)
 add_subdirectory (Grib2toMdv)
 add_subdirectory (GtsSockIngest)
