--- a/codebase/apps/radar/src/CMakeLists.txt
+++ b/codebase/apps/radar/src/CMakeLists.txt
@@ -24,12 +24,12 @@ add_subdirectory (ChillTsFile2Fmq)
 add_subdirectory (ChillTsTcp2Fmq)
 add_subdirectory (CmdVerify)
 add_subdirectory (Colide)
-add_subdirectory (ConvStrat)
 add_subdirectory (Cov2Mom)
 add_subdirectory (DowSendFreq)
 add_subdirectory (DsrGrabber)
 add_subdirectory (DsrMerge)
 add_subdirectory (DualDopplerLobes)
+add_subdirectory (Ecco)
 add_subdirectory (HawkEye)
 add_subdirectory (HcrTempRxGain)
 add_subdirectory (HcrVelCorrect)
