--- a/codebase/apps/radar/src/_makefiles/makefile.apar
+++ b/codebase/apps/radar/src/_makefiles/makefile.apar
@@ -16,11 +16,11 @@ SUB_DIRS = \
 	AparTsPrint \
 	AparTsSim \
 	CalCompute \
-	ConvStrat \
 	Cov2Mom \
 	DsrGrabber \
 	DsrMerge \
 	DualDopplerLobes \
+	Ecco \
 	HawkEye \
 	HcrVelCorrect \
 	HcrTempRxGain \
