--- a/codebase/apps/radar/src/_makefiles/makefile.lrose-core
+++ b/codebase/apps/radar/src/_makefiles/makefile.lrose-core
@@ -20,12 +20,12 @@ SUB_DIRS = \
 	ChillTsTcp2Fmq \
 	CmdVerify \
 	Colide \
-	ConvStrat \
 	Cov2Mom \
 	DowSendFreq \
 	DsrGrabber \
 	DsrMerge \
 	DualDopplerLobes \
+	Ecco \
 	HawkEye \
 	HcrTempRxGain \
 	HcrVelCorrect \
