HawkEdit - adding script function for navigation correction

--- a/codebase/libs/Solo/src/CMakeLists.txt
+++ b/codebase/libs/Solo/src/CMakeLists.txt
@@ -78,6 +78,7 @@ set (SRCS
       ./Solo/ThresholdField.cc
       ./Solo/ForcedUnfolding.cc
       ./Solo/MergeFields.cc
+      ./Solo/NavigationCorrection.cc
       ./Solo/RemoveRing.cc
       ./Solo/RainRate.cc
       ./Solo/Abs.cc
