--- a/codebase/libs/Solo/src/Solo/Makefile
+++ b/codebase/libs/Solo/src/Solo/Makefile
@@ -50,6 +50,7 @@ CPPC_SRCS = \
 	ThresholdField.cc \
 	ForcedUnfolding.cc \
 	MergeFields.cc \
+	NavigationCorrection.cc \
 	RemoveRing.cc \
 	RainRate.cc \
 	Abs.cc \
