--- a/codebase/apps/scripts/src/_makefiles/makefile.lrose-core
+++ b/codebase/apps/scripts/src/_makefiles/makefile.lrose-core
@@ -1,12 +1,8 @@
 #---------------------------------------------------------------------
 #
-# Makefile for script files - titan
+# Makefile for script files - lrose-core
 #
 #---------------------------------------------------------------------
-
-#	Default INSTALL_DIR, should be overridden on command line
-
-INSTALL_DIR=$(LROSE_INSTALL_DIR)/bin
 
 #	Script files to be installed
 
