--- a/codebase/apps/spdb_utils/src/Hash/Makefile
+++ b/codebase/apps/spdb_utils/src/Hash/Makefile
@@ -38,7 +38,7 @@ TARGET_FILE = Hash
 LOC_INCLUDES = $(NETCDF4_INCS)
 
 LOC_LIBS = -lSpdb -ldsserver -ldidss -lrapformats \
-	-lrapplot -ltoolsa -lpthread -ldataport -ltdrp \
+	-ltoolsa -lpthread -ldataport -ltdrp \
 	$(NETCDF4_LIBS) -lbz2 -lz -lpthread \
 	-lm
 
