apps/dsserver/src/StnAscii2Symprod - removing link dependency on lib rapplot

--- a/codebase/apps/dsserver/src/StnAscii2Symprod/Makefile
+++ b/codebase/apps/dsserver/src/StnAscii2Symprod/Makefile
@@ -38,7 +38,7 @@ TARGET_FILE = StnAscii2Symprod
 LOC_INCLUDES = $(NETCDF4_INCS)
 
 LOC_LIBS = -lSpdb -ldsserver -ldidss -lrapformats \
-	-lrapplot -ltoolsa -ldataport -ltdrp \
+	-ltoolsa -ldataport -ltdrp \
 	$(NETCDF4_LIBS) -lbz2 -lz -lpthread \
 	-lm
 
