--- a/codebase/libs/qtplot/src/Makefile
+++ b/codebase/libs/qtplot/src/Makefile
@@ -24,6 +24,8 @@ SUB_DIRS = \
 
 include $(LROSE_CORE_DIR)/build/make_include/lrose_make_recursive_dir_targets
 
+include $(LROSE_CORE_DIR)/build/make_include/lrose_make_inc_targets
+
 include $(LROSE_CORE_DIR)/build/make_include/lrose_make_lib_targets
 
 
